# auntiepypi

./: .flake8  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.claude/: skills.local.yaml.example
.claude/skills/pr-review/: SKILL.md
.claude/skills/pr-review/scripts/: portability-lint.sh  pr-status.sh  workflow.sh
.claude/skills/version-bump/: SKILL.md
.claude/skills/version-bump/scripts/: bump.py
.github/workflows/: publish.yml  tests.yml
agentpypi/: __init__.py  __main__.py  _packages_config.py
agentpypi/_probes/: __init__.py  _probe.py  _runtime.py  devpi.py  pypiserver.py
agentpypi/_rubric/: __init__.py  _dimension.py  _fetch.py  _runtime.py  _sources.py  cadence.py  distribution.py  downloads.py  lifecycle.py  metadata.py  recency.py  versioning.py
agentpypi/cli/: __init__.py  _errors.py  _output.py
agentpypi/cli/_commands/: doctor.py  explain.py  learn.py  overview.py  whoami.py
agentpypi/cli/_commands/_packages/: __init__.py  overview.py
agentpypi/explain/: __init__.py  catalog.py
auntiepypi/: __init__.py  __main__.py  _errors.py  _packages_config.py  _packages_view.py
auntiepypi/_actions/: __init__.py  _action.py  _config_edit.py  _logs.py  _pid.py  _reprobe.py  auntie.py  command.py  systemd_user.py
auntiepypi/_detect/: __init__.py  _config.py  _declared.py  _detection.py  _http.py  _local.py  _port.py  _proc.py  _runtime.py
auntiepypi/_probes/: __init__.py  _probe.py  _runtime.py  devpi.py  pypiserver.py
auntiepypi/_rubric/: __init__.py  _fetch.py  _releases.py  _runtime.py  _sources.py  cadence.py  distribution.py  downloads.py  lifecycle.py  metadata.py  recency.py  versioning.py
auntiepypi/_server/: __init__.py  __main__.py  _app.py  _auth.py  _config.py  _multipart.py  _publish.py  _tls.py  _wheelhouse.py
auntiepypi/cli/: __init__.py  _errors.py  _output.py
auntiepypi/cli/_commands/: _decide.py  _lifecycle.py  _publish_client.py  doctor.py  down.py  explain.py  learn.py  overview.py  publish.py  restart.py  up.py  whoami.py
auntiepypi/cli/_commands/_packages/: __init__.py  overview.py
auntiepypi/explain/: __init__.py  catalog.py
docs/: about.md  afi-setup.md  architecture.md  comparison.md  maturity-rubric.md  onboarding.md  quality-pipeline.md  security.md  sibling-pattern-pointer.md  skill-sources.md  skills-setup.md
docs/deploy/: README.md  devpi.service  pypi-server.service
docs/superpowers/plans/: 2026-04-29-agentpypi-packages-overview.md  2026-04-29-auntie-overview-detection.md  2026-04-29-auntiepypi-packages-overview.md  2026-04-30-auntiepypi-v0.4.0-doctor-lifecycle.md
docs/superpowers/specs/: 2026-04-28-agentpypi-v0.0.1-design.md  2026-04-28-auntiepypi-v0.0.1-design.md  2026-04-29-agentpypi-packages-overview-design.md  2026-04-29-auntie-overview-detection-design.md  2026-04-29-auntiepypi-packages-overview-design.md  2026-04-30-auntiepypi-v0.4.0-doctor-lifecycle-design.md  2026-04-30-auntiepypi-v0.5.0-lifecycle-verbs-design.md  2026-05-01-auntiepypi-v0.6.0-local-server-design.md  2026-05-02-auntiepypi-v0.7.0-tls-auth-design.md  2026-05-03-auntiepypi-v0.8.0-publish-design.md
tests/: conftest.py  test_actions_action.py  test_actions_auntie.py  test_actions_command.py  test_actions_command_lifecycle.py  test_actions_config_edit.py  test_actions_dispatch.py  test_actions_logs.py  test_actions_pid.py  test_actions_reprobe.py  test_actions_systemd_user.py  test_actions_systemd_user_lifecycle.py  test_cli.py  test_cli_decide.py  test_cli_doctor.py  test_cli_learn_catalog_drift.py  test_cli_lifecycle.py  test_cli_overview_composite.py  test_cli_overview_strict.py  test_cli_packages.py  test_cli_publish.py  test_config_local.py  test_detect_config.py  test_detect_config_lenient.py  test_detect_config_strict.py  test_detect_declared.py  test_detect_local.py  test_detect_port.py  test_detect_proc.py  test_detect_runtime.py  test_doctor.py  test_live_packages.py  test_overview.py  test_overview_local.py  test_packages_config.py  test_probes.py  test_rubric_cadence.py  test_rubric_distribution.py  test_rubric_downloads.py  test_rubric_fetch.py  (+16 more)
tests/fixtures/: fake_pypiserver.py
