[project]
name = "auntiepypi"
version = "0.8.1"
description = "auntiepypi — both ends of the Python distribution pipe for the AgentCulture mesh."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "AgentCulture"}]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
]
dependencies = [
    # Stdlib only except for cryptographic primitives stdlib doesn't ship:
    # bcrypt is the de-facto htpasswd password verifier (crypt was removed
    # in 3.13; hashlib.scrypt isn't htpasswd-compatible). Pinned to <5 to
    # avoid surprise majors. Other deps still come in only when a verb
    # genuinely needs something stdlib can't do.
    "bcrypt>=4.0,<5",
]

[project.urls]
Homepage = "https://github.com/agentculture/auntiepypi"
Issues = "https://github.com/agentculture/auntiepypi/issues"

[project.scripts]
auntie = "auntiepypi.cli:main"
auntiepypi = "auntiepypi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auntiepypi"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.1",
    "bandit>=1.7.5",
    "flake8>=6.1",
    "flake8-bugbear>=24.0",
    "flake8-bandit>=4.1",
    "isort>=5.12.0",
    "black>=23.7.0",
    "pylint>=3.0",
    "pre-commit>=3.6",
    # Test-only: generates a session-scoped self-signed RSA cert/key
    # pair for tls/auth tests. Production code never imports this.
    "cryptography>=42.0",
]

[tool.coverage.run]
source = ["auntiepypi"]
omit = ["auntiepypi/__pycache__/*"]

[tool.coverage.report]
# Floor at 94 (was 95 through v0.3.0) — the v0.4.0 lifecycle work added OS-error
# branches in `_actions/command.py` and `_actions/systemd_user.py` (Popen
# `OSError` catch-alls, FileExistsError exhaustion in .bak snapshot, …) that
# are difficult to trigger hermetically without elaborate process fakes.
# Bringing the floor back to 95 should ride along with the next test pass.
fail_under = 94
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["auntiepypi"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B404", "B603"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not live'"
markers = [
    "live: opt-in tests that hit pypi.org / pypistats.org over the network",
]

[tool.auntiepypi]
# Packages this repo cares about for `auntiepypi packages overview`.
# These are AgentCulture siblings published to pypi.org. Add or remove as
# the mesh evolves.
packages = [
    "auntiepypi",
    "afi-cli",
    "shushu",
    "ghafi",
    "steward",
    "cfafi",
]
